# MultiLidarSplicing

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
config/: config.json
config/sensors/: rslidar_front_left.json  rslidar_front_middle.json  rslidar_front_right.json  rslidar_rear_left.json  rslidar_rear_middle.json  rslidar_rear_right.json
include/: MultiLidarSplicing.h
include/sensors/: Lidar.h
script/: build_debug.sh  build_release.sh  clean.sh  run.sh
src/: MultiLidarSplicing.cpp
src/sensors/: Lidar.cpp
